--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <div class="not-finished-text">Not Finished</div>
             <img src="" alt="">
             <div class="card-body">
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text">Portfolio CV en ligne</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                   <a href="404.error.html" target="blank"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
@@ -122,7 +122,7 @@
             <img class="image img-fluid" src="images/Capture d’écran de 2021-10-09 05-15-57.png" alt="">
             <img src="" alt="">
             <div class="card-body">
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text">Composant de carte de prévisualisation à 3 colonnes</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                   <a href="https://epoundor.github.io/project3/" target="blank"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
@@ -138,7 +138,7 @@
             <img class="image img-fluid" src="images/Capture d’écran de 2021-10-09 05-24-38.png" alt="">
             <img src="" alt="">
             <div class="card-body">
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text">Composant de carte de prévisualisation des statistiques à l'aide de HTML CSS</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                   <a href="https://epoundor.github.io/project2/" target="blank"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
@@ -154,7 +154,7 @@
             <img class="img-fluid" src="images/Capture d’écran de 2021-10-09 05-26-52.png" alt="">
             <img src="" alt="">
             <div class="card-body">
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text">Composant récapitulatif de la commande-HTML,Bootstrap.</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                   <a href="https://epoundor.github.io/project1/" target="blank"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
